--- a/index.htm
+++ b/index.htm
@@ -10,6 +10,41 @@
 </head>
 
 <body>
-    <h1>Helo world!!</h1>
+<div class="container">
+    <header>
+        <p class="titulos">&lt;header&gt;</p>
+    </header>
+
+
+    <aside>
+        <p class="titulos">&lt;aside&gt;</p>
+    </aside>
+
+    <main>
+        <div class="flex-container">
+            <article>
+                <p class="titulos">&lt;article&gt;</p>
+            </article>
+            <article>
+                <p class="titulos">&lt;article&gt;</p>
+            </article>
+        </div>
+
+
+        <div class="flex-container">
+            <article>
+                <p class="titulos">&lt;article&gt;</p>
+            </article>
+            <article>
+                <p class="titulos">&lt;article&gt;</p>
+            </article>
+        </div>
+    </main>
+
+    <footer>
+        <p class="titulos">&lt;footer&gt;</p>
+    </footer>
+</div>
 </body>
+
 </html>
